# music-metadata-tool

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: design-web-backend.md
examples/: docker-compose.yml
src/music_metadata_tool/: cli.py  fixer.py  indexer.py  rules.py  tags.py
src/music_metadata_tool/web/: __init__.py  app.py  jobs.py
tests/: test_fixer.py  test_tags.py  test_web_api.py
