[project]
name = "music-metadata-tool"
version = "0.1.0"
description = "Incremental music metadata indexer and conservative tag fixer."
requires-python = ">=3.11"
dependencies = [
  "mutagen==1.47.0",
]

[project.scripts]
music-metadata-tool = "music_metadata_tool.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
