[project]
name = "music-metadata-tool"
version = "0.2.1"
description = "Incremental music metadata indexer and conservative tag fixer."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.124.2",
  "mutagen==1.47.0",
  "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.2",
]

[project.scripts]
music-metadata-tool = "music_metadata_tool.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
